@@ -2,6 +2,7 @@ DIST AdobeHDS.php 82728 SHA256 870ac63525cda33e586c286a27cc2c92bf89c098f628498eb
 DIST yle-dl-2.5.0.tar.gz 30688 SHA256 2e3f64ec7e6f244885ce9d3e9d56010a41af94914e3cb6ca74ffbfa301711279 SHA512 fc5ba269f5f254a2ca2add5dbbdc7df3d657be129fe88dde8d13d4b5479d90489060844c0c7df4bf0cbac566a7afd19c7e391a69953da337f0f4766d65338bdb WHIRLPOOL 990511412275aac2c80fc06104df106939eeca0371dd7e782fcf166482b67fb7cc453e35a82d11bb7afef37c17cd03867bcd4e1af54c5d6e93c5bc5d968953df
 DIST yle-dl-2.7.2.tar.gz 31870 SHA256 4f7f205bb8d08709118f8ab50d6ec2e07309f4b94baa82a6c5545907253c9107 SHA512 3a88395b9f590b6d55baa7fcd66406bf5a59e56fd2ce13c666c6b6de9fabfcd341837cef8e06e595bac9e5dee52a0a2e98321ab002d63e60a332264aef909240 WHIRLPOOL 5af9fef58428e0e5d1619f4af0b65aa12c5410e4c4a74d26ddf93e40d913a4c39c3dc70c9a36f39e9c6d519fdb1db2f30bc380c439d71eec27938310c39d16b0
 EBUILD yle-dl-2.5.0-r3.ebuild 1111 SHA256 dd3bff0fc441c12cfe6b26b0577632bd078940dc216d0e0a16df8ee08f073489 SHA512 21afbbf38ddc7b272a8f878c99db2541cd5b7d17db3fd525ee47827b4cce264aa1194b920be09e3a4ab13225cdc6ed2dda7a927d7adc1080ce37895218fb60e4 WHIRLPOOL c134b4fc2cde3e6d945165b8d1594ceebfc8295dd6312c3ce61d7639bec6cee6bb0cda96202597b034a99fbc559d2f31a5931ba4e32f4093ba5ac4a048039de7
+EBUILD yle-dl-2.7.2-r1.ebuild 987 SHA256 d669ef2c5fcad2a47d3043e219210f083cfabbfe117eba47a06e9d366241ddad SHA512 18e19837a9b1039849cc6513ee248d193f2c9d01983b0f2bb7f0d8fa745aca1e331731ea1167ff0dda2561fecfb08de080194639a016a080fc52a761d401fce7 WHIRLPOOL a3b637ff308c82f3bc7eefd41d58bce2af95ca0c56e72af55a53349e43e77633f27d13bcb0a0f59b1dab9936c194da175d46f5ccc6076d9f27c07a61ffcb5af5
 EBUILD yle-dl-2.7.2.ebuild 945 SHA256 9c11d27645ed7682110a086d918f084c5469e7b6f01b12ebffd4a268d27e9c1c SHA512 6ce4863e72ce22ed3b65285a02795d218e16e44115dea83186acdbe48d6db23edc70735de729521fa6868978d9b22694712d4058810c6dd7182a0a1332990a69 WHIRLPOOL 9a66857cbe6621707eafc25f246469da991c62f02b08418c73a31afe859448a187fd93e876aa478b5f92bfab25fd2684d840b8a3ba84917af4f4f7ccc4c991d5
-MISC ChangeLog 713 SHA256 dd275bed2b5986b579539952a3ecbff9fb337d573c84be7b70363cbfae6a9ec4 SHA512 af5f2ebae6b62d6774b5045ace25e68077ded8f21172d457298c3d759bf9883c3f180ac1fee849de1cbc680f438d9345e6df8afca8f5cc651c92ddb1d13992c1 WHIRLPOOL d0961ad2e9af9ad929b8de2d8249636289ed75eb5e590856757e11872800c2e4bdce37d2923047744400fc823a2acc457f6f8f9983da41170e48b3f3f23531ad
+MISC ChangeLog 851 SHA256 3007711582176793a759a6c294ce5fe2353b4b2ef78ddfb8e423242b960f7c1d SHA512 1afa5be3e7363dc7edccbb5f710090f9f6b37c373aeb026b7bfc3e542f2832cc0c340001f7641aae330cbdcc2bb0b7166cb572a6f89ea807b35fdbd6985a0fe8 WHIRLPOOL b88cd810bcb95665ffe562d5bf2818e8981cd8cb973c32d076cb2cda20aed0f310cdfe3d5b2933db0399cd853a3342acfdb635f394b7beeb7156765ecc5a1e23
 MISC metadata.xml 316 SHA256 b737f0a849a6f9bd108c0334d05ba42abd446d45dc98b8d79a6c9422e9bac362 SHA512 33b1b1ca7de98768fdbfa93427ba50027d546930a8df10c0facc4e5550d587527c9bf224b24816ea458a4e8c89028d9089461328894a887cb85dc823496c43ed WHIRLPOOL 3da54c5d38edf1cbe3269db92c042ec37de6c968505d000c342e0a1c38ac04cc01844767feef5df23e22fdf34e294aff96183fb13c7b6c3121d054ce2c09934e
