@@ -2,6 +2,11 @@
 # Distributed under the terms of the GNU General Public License v2
 # Copyright 2015-2015 Tuomo Hartikainen <tth@harski.org>
 
+*yle-dl-2.7.2-r1 (18 Jul 2015)
+
+  18 Jul 2015; Tuomo Hartikainen <tth@harski.org> +yle-dl-2.7.2-r1.ebuild:
+  Migrate to python-single-r1
+
   18 Jul 2015; Tuomo Hartikainen <tth@harski.org> yle-dl-2.7.2.ebuild:
   Style fixes
 
